feat: 角色分配功能
