# apps/backend-api/src/modules/role/dto/role.list.resp.dto.ts
@@ -3,7 +3,7 @@ import { RoleRespDto } from './role.resp.dto'
 import { ApiProperty } from '@nestjs/swagger'
 import { Expose } from 'class-transformer'
 export class RoleListRespDto extends BatchRespDto {
-  @ApiProperty({ description: '列表' })
+  @ApiProperty({ description: '列表', type: [RoleRespDto] })
   @Expose()
   list: RoleRespDto[]
 }
