# apps/backend-api/src/modules/user/dto/user.dto.ts
@@ -1,5 +1,6 @@
 import { ApiProperty } from '@nestjs/swagger'
-import { IsInt, IsNotEmpty, IsString } from 'class-validator'
+import { IsArray, IsInt, IsNotEmpty, IsString } from 'class-validator'
+import { Expose } from 'class-transformer'
 
 export class AdminResetPasswordDto {
   @ApiProperty({ description: '解密id', type: String, required: true })
@@ -36,4 +37,16 @@ export class ResetPasswordDto {
   @IsInt()
   @IsNotEmpty({ message: '用户id不能为空' })
   userId: number
+}
+export class FindRolesByUserIdResp {
+  @ApiProperty({ description: '角色id列表', type: [Number] })
+  @IsArray()
+  @Expose()
+  list: number[]
+}
+export class AssignRolesToUserDto {
+  @ApiProperty({ description: '角色id列表', type: [Number], required: true })
+  @IsArray()
+  @IsNotEmpty({ message: '角色id列表不能为空' })
+  roleIds: number[]
 }
